--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.1.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
+    "rehype-highlight": "^7.0.2",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
