--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
+    "html2canvas-pro": "^1.6.6",
+    "jspdf": "^4.0.0",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
